--- a/.env
+++ b/.env
@@ -14,13 +14,13 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=
-APP_SECRET=
+#APP_ENV=
+#APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/mongodb-odm-bundle ###
-MONGODB_URL=
-MONGODB_DB=
+#MONGODB_URL=
+#MONGODB_DB=
 ###< doctrine/mongodb-odm-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -29,13 +29,13 @@ MONGODB_DB=
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL=
+#DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=
-JWT_PUBLIC_KEY=
-JWT_PASSPHRASE=
+#JWT_SECRET_KEY=
+#JWT_PUBLIC_KEY=
+#JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
 
 NGINX_PORT=8080
