--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "ext-mysql_xdevapi": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
+        "doctrine/annotations": "^1.12",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/mongodb-odm-bundle": "^4.3",
@@ -20,7 +21,9 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*",
         "zircote/swagger-php": "^3.1"
     },
