--- a/docker/images/php-fpm/php.ini
+++ b/docker/images/php-fpm/php.ini
@@ -4,3 +4,16 @@ memory_limit = 200M
 max_execution_time = 180s
 realpath_cache_size = 16M
 extension=mongodb.so
+
+[xdebug]
+zend_extension=xdebug.so
+xdebug.profiler_enable=1
+xdebug.remote_enable=1
+xdebug.remote_handler=dbgp
+xdebug.remote_mode=req
+xdebug.remote_host=127.0.0.1
+xdebug.remote_connect_back=1
+xdebug.remote_port=9000
+xdebug.remote_autostart=1
+xdebug.idekey=PHPSTORM
+xdebug.show_error_trace=1
