--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "ext-mysql_xdevapi": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.12",
@@ -14,17 +15,21 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/mongodb-odm-bundle": "^4.3",
         "doctrine/orm": "^2.8",
-        "gesdinet/jwt-refresh-token-bundle": "^0.11.1",
         "jms/serializer-bundle": "^3.9",
         "lexik/jwt-authentication-bundle": "^2.11",
+        "nelmio/api-doc-bundle": "^4.2",
+        "symfony/asset": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
         "symfony/http-client": "5.2.*",
         "symfony/proxy-manager-bridge": "5.2.*",
+        "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
         "zircote/swagger-php": "^3.1"
     },
     "config": {
