--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,6 @@ security:
                 password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
-                #require_previous_session: false
         identify:
             pattern: ^/api/v1/identify
             anonymous: true
@@ -32,7 +31,7 @@ security:
             anonymous: true
             stateless: true
         docs:
-            pattern: ^/api/v1/docs
+            pattern: ^/api/v1/doc
             anonymous: true
         api:
             pattern: ^/api/v1/
@@ -43,7 +42,7 @@ security:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
     access_control:
-         - { path: ^/api/v1/(auth|identify|refresh|docs), roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/api/v1/(auth|identify|refresh|doc), roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/api/v1/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/api/v1/reg, roles: ROLE_IDENTIFIED }
          - { path: ^/api/v1/, roles: ROLE_STUDENT }
