--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -2,7 +2,7 @@ lexik_jwt_authentication:
     secret_key: '%env(resolve:JWT_SECRET_KEY)%'
     public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
     pass_phrase: '%env(JWT_PASSPHRASE)%'
-    token_ttl: 3600 # token TTL in seconds, defaults to 1 hour
+    token_ttl: 31536000 # token TTL in seconds, defaults to 1 hour
     user_identity_field: username  # key under which the user identity will be stored in the token payload
     clock_skew: 0
 
