--- a/config/services.yaml
+++ b/config/services.yaml
@@ -44,3 +44,7 @@ services:
 
     App\Service\Validation\PaginationValidationService:
         public: true
+
+    App\EventListener\ExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception  }
