--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "require": {
         "php": ">=7.2.5",
         "ext-ctype": "*",
+        "ext-fileinfo": "*",
         "ext-iconv": "*",
         "ext-imagick": "*",
         "ext-json": "*",
         "ext-mysql_xdevapi": "*",
+        "ext-oci8": "*",
         "ext-sockets": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.12",
@@ -17,6 +19,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/mongodb-odm-bundle": "^4.3",
         "doctrine/orm": "^2.8",
+        "gesdinet/jwt-refresh-token-bundle": "^0.12.0",
         "jms/serializer-bundle": "^3.9",
         "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/api-doc-bundle": "^4.2",
@@ -33,9 +36,7 @@
         "symfony/yaml": "5.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "zircote/swagger-php": "^3.1",
-      "ext-oci8": "*",
-      "ext-fileinfo": "*"
+        "zircote/swagger-php": "^3.1"
     },
     "config": {
         "optimize-autoloader": true,
