--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,6 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
+        url: '%env(resolve:EIS_DB_URL)%'
         charset: UTF8
         options:
             1002: "SET NAMES 'UTF8'"
