--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,6 +30,9 @@ security:
             pattern: ^/api/v1/token/refresh
             anonymous: true
             stateless: true
+        service:
+            pattern: ^/api/v1/service
+            anonymous: true
         docs:
             pattern: ^/api/v1/doc
             anonymous: true
@@ -44,5 +47,6 @@ security:
     access_control:
          - { path: ^/api/v1/(auth|identify|refresh|doc), roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/api/v1/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/api/v1/service, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/api/v1/reg, roles: ROLE_IDENTIFIED }
          - { path: ^/api/v1/, roles: ROLE_STUDENT }
