--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
-version: "3.1"
+version: "3.5"
 volumes:
   mongo: ~
 networks:
-  default:
-    external:
-      name: lkapp_shared_network
+  lkapp_network:
+    name: lkapp_network
 services:
   nginx:
     container_name: lk_nginx
     image: nginx:alpine
     working_dir: /app
+    networks:
+      - lkapp_network
     volumes:
       - ./:/app
       - ./docker/hosts/app.conf:/etc/nginx/conf.d/default.conf
@@ -25,6 +26,8 @@ services:
     build: ./docker/images/php-fpm
     working_dir: /app
     user: root
+    networks:
+      - lkapp_network
     volumes:
       - ./:/app
       - ./docker/images/php-fpm/php.ini:/usr/local/etc/php/conf.d/custom.ini
@@ -41,6 +44,8 @@ services:
   mongodb:
     container_name: lk_mongo
     image: mongo
+    networks:
+      - lkapp_network
     ports:
       - "27017:27017"
     volumes:
